--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,13 @@
 name: material_file_icon
 description: A widget that displays a material file icon based on the file name.
-version: 0.3.2
-homepage:
+version: 0.4.0
+homepage: https://www.branvier.com
+repository: https://github.com/arthurbcd/material_file_icon
+topics:
+ - material
+ - file 
+ - icon
+ - icons
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
