--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "dart.flutterSdkPath": "/Users/art/flutter"
+    "dart.flutterSdkPath": "/Users/art/flutter",
+    "workbench.colorCustomizations": {
+      "activityBar.background": "#322D24",
+      "titleBar.activeBackground": "#463F33",
+      "titleBar.activeForeground": "#FBFAF9"
+    }
 }
